test/expected/umask_modes.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "umask" "0022"]
  [CompoundListCondition, None]
    [SimpleCommand "umask"]
  [CompoundListCondition, None]
    [SimpleCommand "umask" "-S"]
  [CompoundListCondition, None]
    [SimpleCommand "umask" "0999"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "badoct=$?"]
  [CompoundListCondition, None]
    [SimpleCommand "umask" "u=rwx,bogus"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "badsym=$?"]
[Word
  Unquoted "umask"
]
[Word
  Unquoted "0022"
]
[Word
  Unquoted "umask"
]
[Word
  Unquoted "umask"
]
[Word
  Unquoted "-S"
]
[Word
  Unquoted "umask"
]
[Word
  Unquoted "0999"
]
[Word
  Unquoted "2"
]
[Word
  Unquoted "1"
]
[Word
  Unquoted "echo"
]
[Word
  DoubleQuoted "badoct="
  Variable "?"
]
[Word
  Unquoted "umask"
]
[Word
  DoubleQuoted "u=rwx,bogus"
]
[Word
  Unquoted "2"
]
[Word
  Unquoted "1"
]
[Word
  Unquoted "echo"
]
[Word
  DoubleQuoted "badsym="
  Variable "?"
]
0022
u=rwx,g=rx,o=rx
shit: 4:7: error: Builtin `umask`: Unable to set the file creation mask because '0999' is not a valid octal mask.
     4 |  umask 0999 2>&1; echo "badoct=$?"
       |        ^~~~ here.
